The trading symbol is displayed in html and csv reports for currencies

In html and csv reports, the trade symbol is displayed instead
of the longer currency ID when currency values are output,
which helps to save space in the output.

BUG:502604
FIXED-IN:5.2